[package]
name = "citrus-lang"
version = "0.0.1"
description = "The Citrus Programming Language"
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/citrus-lang/citrus"
keywords = ["language"]
categories = []
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs",
]

[dependencies]
